@@ -74,6 +74,35 @@
 //
 // handlers management
 //
+#pragma mark TouchDispatcher - Helpers
+-(BOOL) removeDelegate:(id)delegate fromQueue:(NSMutableArray*)queue
+{
+	id handlerToRemove = nil;
+	
+	for( id handlerOrDelegate in queue ) {
+		
+		if( [handlerOrDelegate isKindOfClass:[CCTouchHandler class]] ) {
+			// it is a handler
+			if (delegate == [handlerOrDelegate delegate]) {
+				handlerToRemove = handlerOrDelegate;
+				break;
+			}
+		} else {
+			// it is a delegate
+			if (delegate == handlerOrDelegate) {
+				handlerToRemove = handlerOrDelegate;
+				break;
+			}
+		}
+	}
+	
+	if( handlerToRemove ) {
+		[queue removeObject:handlerToRemove];
+		return YES;
+	}
+
+	return NO;
+}
 
 #pragma mark TouchDispatcher - Add Hanlder
 
@@ -96,8 +125,10 @@
 	if( ! locked ) {
 		[self forceAddHandler:handler array:standardHandlers];
 	} else {
-		[handlersToAdd addObject:handler];
-		toAdd = YES;
+		if( ! [self removeDelegate:delegate fromQueue:handlersToRemove] ) {
+			[handlersToAdd addObject:handler];
+			toAdd = YES;
+		}
 	}
 }
 
@@ -107,8 +138,10 @@
 	if( ! locked ) {
 		[self forceAddHandler:handler array:targetedHandlers];
 	} else {
-		[handlersToAdd addObject:handler];
-		toAdd = YES;
+		if( ! [self removeDelegate:delegate fromQueue:handlersToRemove] ) {
+			[handlersToAdd addObject:handler];
+			toAdd = YES;
+		}
 	}
 }
 
@@ -141,8 +174,10 @@
 	if( ! locked ) {
 		[self forceRemoveDelegate:delegate];
 	} else {
-		[handlersToRemove addObject:delegate];
-		toRemove = YES;
+		if( ! [self removeDelegate:delegate fromQueue:handlersToAdd] ) {
+			[handlersToRemove addObject:delegate];
+			toRemove = YES;
+		}
 	}
 }
 
